--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -12,25 +12,37 @@
   <div class="ok-body">
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-form-item">
-        <label class="layui-form-label">标题</label>
         <div class="layui-input-block">
-          <input type="text" name="sTitle" placeholder="请输入标题" autocomplete="off" class="layui-input"
-            lay-verify="required" lay-verType="tips">
+          <input type="button" value="全选择" class="layui-input" class="layui-btn layui-btn-normal">
+          <input type="button" value="全取消" class="layui-input" class="layui-btn layui-btn-normal">
+        </div>
+        <div class="layui-input-block">
+          <input type="checkbox" name="" title="dev" value="1" lay-skin="primary" class="layui-input">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">公告类型</label>
+        <div class="layui-input-block">
+          <select name="iType">
+            <option value="1" selected>走马灯</option>
+            <option value="2">停服公告</option>
+            <option value="3">公告</option>
+          </select>
         </div>
       </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">内容</label>
         <div class="layui-input-block">
-          <textarea name="sContent" placeholder="请输入内容" class="layui-textarea" lay-verify="required"
-            lay-verType="tips"></textarea>
-        </div>
+          <textarea name="sContent" required lay-verify="required" placeholder="请输入内容"
+            class="layui-textarea"></textarea></div>
       </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
+          <input type="text" name="sBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
@@ -38,18 +50,32 @@
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iEndTime" id="iEndTime" autocomplete="off" class="layui-input"
+          <input type="text" name="sEndTime" id="iEndTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">是否手动</label>
+        <label class="layui-form-label">显示位置</label>
         <div class="layui-input-block">
-          <select name="iIsManual">
-            <option value="0">否</option>
-            <option value="1" selected>是</option>
+          <select name="iDisplayType">
+            <option value="1" selected>全界面</option>
+            <option value="2">主界面</option>
           </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">显示间隔</label>
+        <div class="layui-input-block">
+          <input type="text" name="iDisplayInterval" class="layui-input" lay-verify="required" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">显示次数</label>
+        <div class="layui-input-block">
+          <input type="text" name="iDisplayNum" class="layui-input" lay-verify="required" lay-verType="tips">
         </div>
       </div>
 
