--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -12,9 +12,9 @@
   <div class="ok-body">
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-form-item">
-        <div class="layui-input-block">
-          <input type="button" value="全选择" class="layui-input" class="layui-btn layui-btn-normal">
-          <input type="button" value="全取消" class="layui-input" class="layui-btn layui-btn-normal">
+        <div class="layui-btn-container">
+            <button type="button" class="layui-btn layui-btn-radius layui-btn-normal">全选择</button>
+            <button type="button" class="layui-btn layui-btn-radius layui-btn-normal">全取消</button>
         </div>
         <div class="layui-input-block">
           <input type="checkbox" name="" title="dev" value="1" lay-skin="primary" class="layui-input">
