--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="ok-body">
-    <i class="layui-icon-fonts-html" color="#FF0000">TIPS: 对于公告修改，暂时只支持暂停公告，暂停后不能恢复，要修改其他字段，请暂停公告，创建一个新的公告</i>
+    <font color="#FF0000">TIPS: 对于公告修改，暂时只支持暂停公告，暂停后不能恢复，要修改其他字段，请暂停公告，创建一个新的公告</font>
     <table id="tableId" lay-filter="tableFilter"></table>
   </div>
   <!--js逻辑-->
@@ -118,7 +118,7 @@
       });
 
       function add() {
-        okLayer.open("添加跑马灯", "notice-add.html", "90%", "90%", null, function () {
+        okLayer.open("添加跑马灯", "/gm/notice-add.html", "90%", "90%", null, function () {
           noticeTable.reload();
         })
       }
@@ -138,7 +138,7 @@
       }
 
       function edit(id) {
-        okLayer.open("编辑跑马灯", "notice-edit.html", "90%", "90%", null, function () {
+        okLayer.open("编辑跑马灯", "/gm/notice-edit.html", "90%", "90%", null, function () {
           noticeTable.reload();
         })
       }
