--- a/front/pages/gm/mail-add.html
+++ b/front/pages/gm/mail-add.html
@@ -12,7 +12,7 @@
   <div class="ok-body">
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-form-item">
-        <label class="layui-form-label">标题</label>
+        <label class="layui-form-label">发件人</label>
         <div class="layui-input-block">
           <input type="text" name="sFrom" placeholder="请输入发件人" autocomplete="off" class="layui-input" lay-verify="required" lay-verType="tips">
         </div>
