--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -59,6 +59,9 @@
           case "add":
             add();
             break;
+          case "add2":
+            add2();
+            break;
           case "batchDel":
             batchDel();
             break;
@@ -75,7 +78,13 @@
       });
 
       function add() {
-        okLayer.open("添加邮件", "mail-add.html", "90%", "90%", null, function () {
+        okLayer.open("发送邮件", "mail-add.html", "90%", "90%", null, function () {
+          mailTable.reload();
+        })
+      }
+
+      function add2() {
+        okLayer.open("发送自定义邮件", "mail-add2.html", "90%", "90%", null, function () {
           mailTable.reload();
         })
       }
@@ -110,6 +119,7 @@
   <div class="layui-btn-container">
     <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
     <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
+    <div class="layui-inline" lay-event="add2"><i class="layui-icon layui-icon-add-1"></i></div>
   </div>
 </script>
 
