--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -76,8 +76,8 @@
         </div>
       </div>
 
-      <div class="layui-form-item" id="maintenanceTime">
-        <label class="layui-form-label layui-hide">维护时间</label>
+      <div class="layui-form-item layui-hide" id="maintenanceTime">
+        <label class="layui-form-label">维护时间</label>
         <div class="layui-input-block">
           <input type="text" name="iMaintenanceTime" class="layui-input" lay-verify="required" lay-verType="tips">
         </div>
