--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -32,7 +32,7 @@
       <div class="layui-form-item" id="content">
         <label class="layui-form-label">内容</label>
         <div class="layui-input-block">
-          <textarea name="sContent" required lay-verify="required" placeholder="请输入内容"
+          <textarea name="sContent" placeholder="请输入内容"
             class="layui-textarea"></textarea></div>
       </div>
 
@@ -65,21 +65,21 @@
       <div class="layui-form-item" id="displayInterval">
         <label class="layui-form-label">显示间隔</label>
         <div class="layui-input-block">
-          <input type="text" name="iDisplayInterval" class="layui-input" lay-verify="required" lay-verType="tips">
+          <input type="text" name="iDisplayInterval" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item" id="displayNum">
         <label class="layui-form-label">显示次数</label>
         <div class="layui-input-block">
-          <input type="text" name="iDisplayNum" class="layui-input" lay-verify="required" lay-verType="tips">
+          <input type="text" name="iDisplayNum" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item layui-hide" id="maintenanceTime">
         <label class="layui-form-label">维护时间</label>
         <div class="layui-input-block">
-          <input type="text" name="iMaintenanceTime" class="layui-input" lay-verify="required" lay-verType="tips">
+          <input type="text" name="iMaintenanceTime" class="layui-input">
         </div>
       </div>
 
